# matomo_pull

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  Dockerfile  Makefile  README.md  app.py  config-example.yml  config.yml  date_handling.py  file_handling.py  main.py  pyproject.toml  pytest.ini  requirements.txt  secrets-example.yml  server.py  settings.py  sql_handling.py  url_handling.py
.github/workflows/: deploy.yml  lint.yml  pytest.yml  syntax.yml  tests.yml
matomo_import/: data_handling.py  date_handling.py  file_handling.py  settings.py  sql_handling.py  url_handling.py
matomo_pull/: data_handling.py  date_handling.py  settings.py  sql_handling.py  url_handling.py  utils.py
tests/: conftest.py  test_app.py  test_data_handling.py  test_date_handling.py  test_settings.py  test_sql_handling.py  test_url_handling.py  utils.py
